--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "mycli",
+  "name": "pwm",
   "version": "0.0.1",
   "description": "A simple CLI",
   "main": "index.js",
   "bin": {
-    "mycli": "./index.js"
+    "pwm": "./index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
