--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
+    "@clack/prompts": "^0.7.0",
     "crypto": "^1.0.1",
     "yargs": "^17.7.2"
   }
