--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "@clack/prompts": "^0.7.0",
+    "chalk": "^5.3.0",
     "clipboardy": "^4.0.0",
     "crypto": "^1.0.1",
     "yargs": "^17.7.2"
