--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple CLI",
   "main": "index.js",
   "bin": {
-    "pwm": "./index.js"
+    "pwm": "./bin/index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
