--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pwm",
   "version": "1.0.0",
-  "description": "A simple CLI",
+  "description": "Password-Manager CLI",
   "main": "index.js",
   "bin": {
     "pwm": "./bin/index.js"
@@ -13,7 +13,7 @@
     "cli",
     "simple"
   ],
-  "author": "Your Name",
+  "author": "Jonas Jacob Biermann",
   "license": "MIT",
   "dependencies": {
     "@clack/prompts": "^0.7.0",
